# ctrl_planner

./: CMakeLists.txt  README.md  package.xml  setup.py
include/ctrl_planner/: map_manager.h  voxblox_for_dist.h
include/ctrl_planning/: map_manager_voxblox_impl.h  test_voxblox.h
launch/: ctrl_planner.launch  ctrl_planner_test.launch  ctrl_planner_train.launch  start_rotors_gazebo.launch  start_sim_gazebo.launch  test_voxblox.launch
params/: ResetSimParams.yaml
scripts/: ActorCritic.py  EncodedRangeImageCNN.py  GoToStartPoint.py  RangeImageCNN.py  ResetSim.py  Reward.py  RunSim.py  RunSimTest.py  SimulationClass.py  SimulationClassOld.py  test.py  utils.py
scripts/ActorCritic/weights/: actor_weights.data-00000-of-00002  actor_weights.index  critic_weights.data-00000-of-00002  critic_weights.data-00001-of-00002  critic_weights.index
scripts/ActorCritic/weights/GoodWeights/: actor_weights.data-00000-of-00002  actor_weights.data-00001-of-00002  actor_weights.index  critic_weights.data-00000-of-00002  critic_weights.index
scripts/AutoEncoder/: AutoEncoder.py  CustomTrainingCallback.py
scripts/AutoEncoder/weights/: checkpoint  encoder_DECODER_weights.data-00000-of-00002  encoder_DECODER_weights.index  encoder_weights.data-00000-of-00002  encoder_weights.data-00001-of-00002  encoder_weights.index
src/: map_manager_voxblox_impl.cpp  test_voxblox.cpp  voxblox_for_dist.cpp  wait_for_gazebo.cpp
srv/: collision_checking.srv
training_data/: TrainingDataLabels.txt
