<?xml version="1.0"?>
<package format="2">
  <name>ctrl_planning</name>
  <version>0.0.0</version>
  <description>The ctrl_planning package</description>
  <maintainer email="satchelhirsh@nevada.unr.edu">satchel</maintainer>

  <license>None</license>


  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>image_proc</depend>
  <depend>image_transport</depend>
  <depend>tf</depend>
  <depend>voxblox_ros</depend>
  <!-- <depend>octomap_world</depend> -->
  <!-- <buildtool_depend>catkin</buildtool_depend> -->
  <!-- <depend>roscpp</depend> -->
  <depend>rospy</depend>

</package>
